# VR_API_Core

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
src/: .env  .env.example  main.py  schemas.py
src/containers/: config_containers.py
src/csv_loader/: config.py  dependencies.py  routers.py  service.py  utils.py
src/influx_api/: config.py  pkg.py  routers.py  schemas.py  service.py  utils.py
src/influx_api/pkg/: LUN-A.xlsx  pkg.py
vr-calculation-backend-master/: .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  inline.ca.der  pom.xml  sakhalin.ca.crt  sakhalin.ca.der
vr-calculation-backend-master/diagram/: architecture.drawio
vr-calculation-backend-master/manifests/: deployment.yaml  deployment_inline_DH.yaml
vr-calculation-backend-master/sql_scripts/: script.sql
vr_ml_transfer-develop/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yaml  manipulation.py  model_utils.py  pip.conf  requirements.txt  server_fastapi.py  server_flask.py  settings.py  training.py  utils.py
vr_ml_transfer-develop/manifests/: deployment.yaml
vr_ml_transfer-develop/models/: Паспорт модели.txt
vr_pmm_transfer-develop/: .gitlab-ci.yml  README.md
vr_pmm_transfer-develop/infra/: Dockerfile  docker-compose.yml  requirements.txt
vr_pmm_transfer-develop/manifests/: deployment.yaml
vr_pmm_transfer-develop/service/: macos_pmf.txt  main.py  pmf.txt  well_parser.py
vr_pmm_transfer-develop/service/api/: routers.py
vr_pmm_transfer-develop/service/core/: logger.py
ziiot-CORE/: README.md
ziiot-CORE/src/: main.py
(+247 files in other folders)
