[tool.poetry]
name = "ziiot-api-core"
version = "0.1.0"
description = ""
authors = ["mr.Robot <zanid227@yandex.ru>"]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
fastapi = "0.115.11"
uvicorn = "0.34.0"
dependency-injector = "4.46.0"
annotated-types = "0.7.0"
anyio = "4.8.0"
boto3 = "1.37.9"
botocore = "1.37.9"
certifi = "2025.1.31"
click = "8.1.8"
colorama = "0.4.6"
fastapi-storages = "0.3.0"
h11 = "0.14.0"
idna = "3.10"
influxdb-client = "1.48.0"
jmespath = "1.0.1"
numpy = "2.2.3"
pandas = "2.2.3"
patool = "4.0.0"
pydantic = "2.10.6"
pydantic-settings = "2.8.1"
pydantic-core = "2.27.2"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-multipart = "0.0.20"
pytz = "2025.1"
reactivex = "4.0.4"
s3transfer = "0.11.4"
six = "1.17.0"
sniffio = "1.3.1"
starlette = "0.46.1"
typing-extensions = "4.12.2"
tzdata = "2025.1"
urllib3 = "2.3.0"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
